@startuml
set namespaceSeparator ::

class "vivaoinseto_tg::cards.dart::Game" {
  +Color hiddenCard
  +List<Color>? gameColors
  +List<String>? gameImg
  +List<Color> cards
  +String hiddenCardpath
  +List<String> cards_list
  +int cardCount
  +List<Map<int, String>> matchCheck
  +void initGame()
}

"vivaoinseto_tg::cards.dart::Game" o-- "dart::ui::Color"

class "vivaoinseto_tg::pages::galeria.dart::Galeria" {
  +State<Galeria> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "vivaoinseto_tg::pages::galeria.dart::Galeria"

class "vivaoinseto_tg::pages::galeria.dart::_GaleriaState" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "vivaoinseto_tg::pages::galeria.dart::_GaleriaState"

class "vivaoinseto_tg::pages::jogodamemoria.dart::JogoDaMemoria" {
  +State<JogoDaMemoria> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "vivaoinseto_tg::pages::jogodamemoria.dart::JogoDaMemoria"

class "vivaoinseto_tg::pages::jogodamemoria.dart::_JogoDaMemoriaState" {
  +TextStyle whiteText
  +bool hideTest
  -Game _game
  +int tries
  +int score
  +void initState()
  +Widget build()
}

"vivaoinseto_tg::pages::jogodamemoria.dart::_JogoDaMemoriaState" o-- "flutter::src::painting::text_style.dart::TextStyle"
"vivaoinseto_tg::pages::jogodamemoria.dart::_JogoDaMemoriaState" o-- "vivaoinseto_tg::cards.dart::Game"
"flutter::src::widgets::framework.dart::State" <|-- "vivaoinseto_tg::pages::jogodamemoria.dart::_JogoDaMemoriaState"

class "vivaoinseto_tg::pages::login.dart::Login" {
  +State<Login> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "vivaoinseto_tg::pages::login.dart::Login"

class "vivaoinseto_tg::pages::login.dart::_LoginState" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "vivaoinseto_tg::pages::login.dart::_LoginState"

class "vivaoinseto_tg::pages::quebracabecas.dart::QuebraCabecas" {
  +State<QuebraCabecas> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "vivaoinseto_tg::pages::quebracabecas.dart::QuebraCabecas"

class "vivaoinseto_tg::pages::quebracabecas.dart::_QuebraCabecasState" {
  +GlobalKey<JigsawWidgetState> puzzleKey
  +Widget build()
}

"vivaoinseto_tg::pages::quebracabecas.dart::_QuebraCabecasState" o-- "flutter::src::widgets::framework.dart::GlobalKey<JigsawWidgetState>"
"flutter::src::widgets::framework.dart::State" <|-- "vivaoinseto_tg::pages::quebracabecas.dart::_QuebraCabecasState"



@enduml
